# pyArborX

./: .gitignore  CMakeLists.txt  LICENSE  README.md  __init__.py  setup.py
example/: .example.py.swp  example.py
pyArborX/: __init__.py
pyArborX/bvh/: bvh.py
pyArborX/util/: ClassGenerator.py  ModuleGenerator.py
static/: CMakeLists.txt  pyArborX_static.cpp.in
static/include/: config.hpp  pyArborX_BVH.hpp  pyArborX_Box.hpp  pyArborX_ExecutionSpace.hpp  pyArborX_Experimental.hpp  pyArborX_Point.hpp  pyArborX_Sphere.hpp  pyArborX_Util.hpp  pyArborX_Views.hpp.in  pyArborX_Views_Util.hpp
static/src/: pyArborX_BVH.cpp  pyArborX_Box.cpp  pyArborX_ExecutionSpace.cpp  pyArborX_Experimental.cpp  pyArborX_Point.cpp  pyArborX_Sphere.cpp  pyArborX_Util.cpp  pyArborX_Views.cpp.in
